# fishing-bot

./: .gitignore  README.md  mjmodel.xml  mojocowithchaoyi'scontroller.ipynb
CAD/: fishing_assy.SLDASM  fishing_assy2.SLDASM  rod-v2.SLDPRT  rod-v3.SLDPRT  rod.SLDPRT  rod_assy.SLDASM
CAD/assets/: MX-28AT_AR.SLDPRT  load-cell.SLDPRT
CAD/assy2/: Base_Collision.SLDPRT  Link1_Collision.SLDPRT  Link2_Collision.SLDPRT  fishing_assy2.SLDASM  fishing_assy2_collisional.SLDASM  fishing_assy2_visual.SLDASM
CAD/assy2/STL/: fishing_assy2 - Part1^fishing_assy2-1.STL  fishing_assy2 - Part2^fishing_assy2-1.STL  fishing_assy2 - rod_assy-1 Part1^rod_assy-1.STL  fishing_assy2 - rod_assy-1 rod-v2-1.STL
CAD/assy2/fishing_assy2_collisional/: CMakeLists.txt  package.xml
CAD/assy2/fishing_assy2_collisional/launch/: display.launch  gazebo.launch
CAD/assy2/fishing_assy2_collisional/meshes/: Link_1_collision.STL  base_link.STL
CAD/assy2/fishing_assy2_collisional/urdf/: fishing_assy2_collisional.csv  fishing_assy2_collisional.urdf
CAD/assy2/fishing_assy2_combined/: CMakeLists.txt  package.xml
CAD/assy2/fishing_assy2_combined/config/: joint_names_fishing_assy2_combined.yaml
CAD/assy2/fishing_assy2_combined/launch/: display.launch  gazebo.launch
CAD/assy2/fishing_assy2_combined/urdf/: fishing_assy2_combined.csv  fishing_assy2_combined.urdf  model.config
CAD/assy2/meshes/: Link_1.STL  Link_2.STL  Link_2_collision.STL  base_link.STL
scripts/: 1dof_fk&ik.py  fishing_arm_1dof_control_sim.py  sensor_rawdata.ino  sketch_may29a.ino
sim/: Untitled6.ipynb  fishing-robot_sim.xml
simulation/: untitled1.py
software/.roslog/: latest
software/recordings/: .gitignore
software/src/bringup/: CMakeLists.txt  package.xml
software/src/bringup/config/: controllers.yaml  params.yaml
software/src/bringup/launch/: robot.launch.py
software/src/control/: package.xml  setup.py
software/src/control/control/: admittance_controller.py  position_test_publisher.py
software/src/control/launch/: control.launch.py
software/src/description/: CMakeLists.txt  package.xml
software/src/description/urdf/: fishing-robot.urdf.xacro  fishing-robot_hw.urdf  fishing-robot_sim.urdf  fishing-robot_sim.xml  xml-creation.py
software/src/diagnostics/: package.xml  setup.py
software/src/diagnostics/config/: diagnostics_params.yaml
software/src/interfaces/: CMakeLists.txt  package.xml
software/src/planning/: package.xml  setup.py
software/src/sensors/: package.xml  setup.py
src/control/: package.xml
src/interfaces/: package.xml
(+11 files in other folders)
