<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nathange784@gmail.com">nzge</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- xacro is needed to process fishing-robot.urdf.xacro -->
  <exec_depend>xacro</exec_depend>

  <!-- Hardware plugin referenced by the URDF on the real-robot path -->
  <exec_depend>dynamixel_hardware</exec_depend>

  <!-- Simulation plugin referenced by the URDF (built from source; see note) -->
  <!-- <exec_depend>mujoco_ros2_control</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
